# wbx-similar-presets

./: .gitignore  Dockerfile  main.py  pyproject.toml
utils/nm_holder_handlers/: presets_data_collector.py
